# MOCO_SDK

./: MOCO_SDK.rar  README.md  ROS测试教程.doc  moco通用控制器ROS开发教程.doc
MOCO_CV/: CMakeLists.txt  package.xml
MOCO_CV/launch/: moco_cv.launch  moco_cv_aruco.launch  moco_cv_color.launch
MOCO_CV/src/: moco_cap_pub.cpp  moco_cap_sub.cpp  moco_cv_aruco.cpp  moco_cv_color.cpp
MOCO_PLAN/: CMakeLists.txt  package.xml
MOCO_PLAN/launch/: moco_track_pix_aruco.launch  moco_track_pix_color.launch
MOCO_PLAN/src/: moco_track_pix.cpp
MOCO_ROS/: CMakeLists.txt  package.xml
MOCO_ROS/include/: moco_sdk.h  moco_sdk_uart.h  queue.hpp  serialport_setting.hpp  types.hpp
MOCO_ROS/launch/: moco_all.launch  moco_ros.launch
MOCO_ROS/src/: .cpp  moco_ros.cpp  moco_sdk.cpp  moco_sdk_uart.cpp
MOCO_SDK/: CMakeLists.txt
MOCO_SDK/include/: moco_sdk.h  moco_sdk_uart.h
MOCO_SDK/src/: main.cpp  moco_sdk.cpp  moco_sdk_uart.cpp
